--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "eslint": "^8.34.0",
         "eslint-plugin-vue": "^9.9.0",
         "prettier": "^2.8.4",
+        "tailwindcss": "^3.2.7",
         "vite": "^4.1.4"
     }
 }
