--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
-        "vue": "^3.2.47"
+        "vue": "^3.2.47",
+        "vue-verovio-canvas": "^1.1.0"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.2.0",
@@ -40,6 +41,7 @@
         "postcss": "^8.4.21",
         "prettier": "^2.8.4",
         "tailwindcss": "^3.2.7",
+        "verovio": "^3.14.0",
         "vite": "^4.1.4"
     }
 }
