--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "howler": "^2.2.3",
         "vue": "^3.2.47",
         "vue-verovio-canvas": "^1.1.0"
     },
