--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-verovio-canvas": "^1.1.0"
     },
     "devDependencies": {
+        "@iconify/vue": "^4.1.0",
         "@rushstack/eslint-patch": "^1.2.0",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/eslint-config-prettier": "^7.1.0",
