--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "build:demo": "vite --config vite.demo.config.js build",
         "preview": "vite preview",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
         "format": "prettier --write src/"
