--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ indent_style = space
 indent_size = 4
 insert_final_newline = false
 
-[*.vue, *.js, , *.ts]
+[*.vue, *.js, *.ts]
 indent_style = space
 indent_size = 4
 insert_final_newline = true
