--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,8 @@ insert_final_newline = false
 indent_style = space
 indent_size = 4
 insert_final_newline = true
+
+[*.yaml]
+indent_style = space
+indent_size = 4
+insert_final_newline = true
