--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "./style.css": "./dist/style.css"
     },
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --config vite.demo.config.js ",
         "build": "vite build",
         "build:demo": "vite --config vite.demo.config.js build",
         "preview": "vite preview",
@@ -44,6 +44,7 @@
         "eslint": "^8.34.0",
         "eslint-plugin-vue": "^9.9.0",
         "postcss": "^8.4.21",
+        "postcss-prefix-selector": "^1.16.0",
         "prettier": "^2.8.4",
         "tailwindcss": "^3.2.7",
         "verovio": "^3.14.0",
