--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@vueuse/core": "^10.3.0",
         "howler": "^2.2.3",
+        "ofetch": "^1.3.3",
         "vue": "^3.2.47",
         "vue-verovio-canvas": "^1.1.0"
     },
